Added preflagging module and ao_strategies subdirectory with strategies for flagging with AOFlagger. Changed notebook to include convert and preflag step.

--- a/ipython-notebooks/20161124_3C343.ipynb
+++ b/ipython-notebooks/20161124_3C343.ipynb
@@ -53,6 +53,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preflag = apercal.preflag('/Users/adebahr/Software/apercal/ipython-notebooks/20161124_3C343.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert = apercal.convert('/Users/adebahr/Software/apercal/ipython-notebooks/20161124_3C343.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert.go()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
