--- a/ipython-notebooks/20161124_3C343.ipynb
+++ b/ipython-notebooks/20161124_3C343.ipynb
@@ -63,9 +63,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "preflag.go()"
    ]
   },
   {
