Fixed preflag module to do manual flagging now. Changed config files towards having better structure. Changes still ned to be implemented in other modules.

--- a/ipython-notebooks/commissioning/2211440_3C147.ipynb
+++ b/ipython-notebooks/commissioning/2211440_3C147.ipynb
@@ -2,11 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "root - INFO : Logging started!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "root - INFO : To see the log in a bash window use the following command:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "root - INFO : tail -n +1 -f /home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.log\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup logger with lib.setup_logger()\n"
+     ]
+    }
+   ],
    "source": [
     "# Header Block. You should NOT rerun this block if you have not restarted the kernel.\n",
     "%config IPCompleter.greedy=True\n",
@@ -17,18 +46,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg successfully read! ###\n"
+     ]
+    }
+   ],
    "source": [
     "preflag = apercal.preflag('/home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : ########## PRE-FLAGGING started ##########\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Moved to directory /data/adebahr/apertif/2211440_3C147/raw #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : ### Doing pre-flagging with AOFlagger ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : ### Flagging of WSRTA2211440_B018.MS using fluxcal.rfis done ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : ### Starting pre-flagging of known flags ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging antenna(s) RT3,RT8,RTC,RTD for flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging of antenna(s) RT3,RT8,RTC,RTD for flux calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging correlation(s) XY,YX,YY for flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging of correlation(s) RT3,RT8,RTC,RTD for flux calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging shadowed antennas for flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging of shadowed antennas for flux calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : ### Pre-flagging of known flags done ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : ########## PRE-FLAGGING done ##########\n"
+     ]
+    }
+   ],
    "source": [
     "preflag.go()"
    ]
