--- a/ipython-notebooks/commissioning/2211440_3C147.ipynb
+++ b/ipython-notebooks/commissioning/2211440_3C147.ipynb
@@ -164,18 +164,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg successfully read! ###\n"
+     ]
+    }
+   ],
    "source": [
     "convert = apercal.convert('/home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ########## FILE CONVERSION started ##########\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : # Creating directory /data/adebahr/apertif/2211440_3C147/crosscal #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : # Moved to directory /data/adebahr/apertif/2211440_3C147/crosscal #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ### Using CASA toolkit to convert from MS to UVFITS format! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ### Converted MS file WSRTA2211440_B018.MS to UVFITS using CASA toolkit! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ### Using MIRIAD fits task to convert data from UVFITS to MIRIAD format ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ### Converted UVFITS file WSRTA2211440_B018.MS to MIRIAD format using MIRIAD task fits! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ### Conversion from UVFITS to MIRIAD fromat done! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "convert - INFO : ########## FILE CONVERSION done ##########\n"
+     ]
+    }
+   ],
    "source": [
     "convert.go()"
    ]
