Calibration of flux calibrator with direct fringe stopping added

--- a/ipython-notebooks/commissioning/2211440_3C147.ipynb
+++ b/ipython-notebooks/commissioning/2211440_3C147.ipynb
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "preflag - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg successfully read! ###\n"
+      "PREFLAG - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg successfully read! ###\n"
      ]
     }
    ],
@@ -105,14 +105,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "preflag - INFO : # Flagging antenna(s) RT3,RT8,RTC,RTD for flux calibrator data #\n"
+      "preflag - INFO : # Flagging auto-correlations for flux calibrator data #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "preflag - INFO : # Flagging of antenna(s) RT3,RT8,RTC,RTD for flux calibrator data done #\n"
+      "preflag - INFO : # Auto-correlation flagging for flux calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging antenna(s) RT2,RT3,RT8,RTC,RTD for flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "preflag - INFO : # Flagging of antenna(s) RT2,RT3,RT8,RTC,RTD for flux calibrator data done #\n"
      ]
     },
     {
@@ -126,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "preflag - INFO : # Flagging of correlation(s) RT3,RT8,RTC,RTD for flux calibrator data done #\n"
+      "preflag - INFO : # Flagging of correlation(s) XY,YX,YY for flux calibrator data done #\n"
      ]
     },
     {
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,11 +268,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg successfully read! ###\n"
+     ]
+    }
+   ],
    "source": [
     "ccal = apercal.ccal('/home/adebahr/apercal/ipython-notebooks/commissioning/2211440_3C147.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ### Fringe stopping started ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Moved to directory /data/adebahr/apertif/2211440_3C147/crosscal #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Doing fringe stopping by using the integration time of the observation and a point source model #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Self calibrating flux calibrator dataset WSRTA2211440_B018.mir with solution interval 0.016666 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ### Fringe stopping done ###\n"
+     ]
+    }
+   ],
+   "source": [
+    "ccal.fringe_stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Doing bandpass calibration on the flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Bandpass calibration on the flux calibrator data done #\n"
+     ]
+    }
+   ],
+   "source": [
+    "ccal.cal_bandpass()"
    ]
   },
   {
@@ -267,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ccal.go()"
+    ""
    ]
   }
  ],
