--- a/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
@@ -53,6 +53,222 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "PREFLAG - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg successfully read! ###\n"
+     ]
+    }
+   ],
+   "source": [
+    "preflag = apercal.preflag('/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ########## PRE-FLAGGING started ##########\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Moved to directory /data/adebahr/apertif/tutorial/NGC4062/raw #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ### Doing pre-flagging with AOFlagger ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ### Flagging of 3C147.MS using fluxcal.rfis done ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ### Flagging of 3C138.MS using polcal.rfis done ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ### Flagging of NGC4062.MS using target.rfis done ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ### Starting pre-flagging of known flags ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging auto-correlations for flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Auto-correlation flagging for flux calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging auto-correlations for polarisation calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Auto-correlation flagging for polarisation calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging auto-correlations for target data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Auto-correlation flagging for target data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging antenna(s) RT5 for flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging of antenna(s) RT5 for flux calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging antenna(s) RT5 for polarised calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging of antenna(s) RT5 for polariased calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging antenna(s) RT5 for target data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging of antenna(s) RT5 for target data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging shadowed antennas for flux calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging of shadowed antennas for flux calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging shadowed antennas for polarised calibrator data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging of shadowed antennas for polarised calibrator data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging of shadowed antennas for target data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : # Flagging of shadowed antennas for target data done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ### Pre-flagging of known flags done ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PREFLAG - INFO : ########## PRE-FLAGGING done ##########\n"
+     ]
+    }
+   ],
+   "source": [
+    "preflag.go()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "CONVERT - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg successfully read! ###\n"
      ]
     }
@@ -63,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +293,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CONVERT - INFO : ### Starting conversion from UVFITS to MIRIAD format ###\n"
+      "CONVERT - INFO : ### Starting conversion from MS to UVFITS format ###\n"
      ]
     },
     {
@@ -85,6 +301,48 @@
      "output_type": "stream",
      "text": [
       "CONVERT - INFO : # Moved to directory /data/adebahr/apertif/tutorial/NGC4062/crosscal #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONVERT - INFO : ### Using CASA toolkit to convert from MS to UVFITS format! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONVERT - INFO : ### Converted MS file 3C147.MS to UVFITS using CASA toolkit! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONVERT - INFO : ### Converted MS file 3C138.MS to UVFITS using CASA toolkit! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONVERT - INFO : ### Converted MS file NGC4062.MS to UVFITS using CASA toolkit! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONVERT - INFO : ### Conversion from MS to UVFITS format done! ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONVERT - INFO : ### Starting conversion from UVFITS to MIRIAD format ###\n"
      ]
     },
     {
@@ -136,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +456,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CROSSCAL - INFO : # Bandpass from flux calibrator data copied to polarised calibrator data. #\n"
+      "CROSSCAL - INFO : # Bandpass from flux calibrator data copied to polarised calibrator data #\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CROSSCAL - INFO : # Solved for polarisation leakage and angle on polarised calibrator. #\n"
+      "CROSSCAL - INFO : # Solved for polarisation leakage and angle on polarised calibrator #\n"
      ]
     },
     {
@@ -218,6 +476,37 @@
    ],
    "source": [
     "ccal.polarisation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ### Copying calibrator solutions to target dataset ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : # Copying calibrator solutions (bandpass, gains, leakage, angle) from polarised calibrator #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CROSSCAL - INFO : ### All solutions copied to target data ###\n"
+     ]
+    }
+   ],
+   "source": [
+    "ccal.transfer_to_target()"
    ]
   },
   {
