--- a/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "root - INFO : tail -n +1 -f /home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.log\n"
+      "root - INFO : tail -n +1 -f /home/adebahr/apercal/ipython-notebooks/tutorials/logs/A1.log\n"
      ]
     },
     {
@@ -40,7 +40,7 @@
     "# Header Block. You should NOT rerun this block if you have not restarted the kernel.\n",
     "%config IPCompleter.greedy=True\n",
     "import lib\n",
-    "lib.setup_logger('info', logfile='/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.log')\n",
+    "lib.setup_logger('info', logfile='/home/adebahr/apercal/ipython-notebooks/tutorials/logs/A1.log')\n",
     "import apercal"
    ]
   },
@@ -77,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "PREFLAG - INFO : # Moved to directory /data/adebahr/apertif/tutorial/NGC4062/raw #\n"
+      "PREFLAG - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/raw #\n"
      ]
     },
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CONVERT - INFO : # Moved to directory /data/adebahr/apertif/tutorial/NGC4062/crosscal #\n"
+      "CONVERT - INFO : # Creating directory /data/adebahr/apertif/tutorial/A1/crosscal #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CONVERT - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/crosscal #\n"
      ]
     },
     {
@@ -394,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
