- splitdata function added to scal.py (was tested on single subband and multi-subband data)

--- a/ipython-notebooks/tutorials/A2 - Calibrating single pointing HI WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A2 - Calibrating single pointing HI WSRT data.ipynb
@@ -494,16 +494,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/A2/selfcal #\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -512,10 +505,101 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : ### Splitting of target data into individual freqeuncy chunks started ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Applying calibrator solutions to target data before averaging #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Calibrator solutions to target data applied #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Found 1 subband(s) in target data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Started splitting of subband 0 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "scal.py:95: RuntimeWarning: divide by zero encountered in log\n  subband_chunks = int(np.power(2, np.ceil(np.log(subband_chunks) / np.log(2)))) # Round to the closest power of 2 for frequency chunks with the same bandwidth over the frequency range of a subband\nSELFCAL - INFO : # Adjusting chunk size to 0.00999999977648 GHz for regular gridding of the data chunks over frequency #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 0 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.00124999997206 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Creating directory /data/adebahr/apertif/tutorial/A2/selfcal/00 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 0 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data for subband 0 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : ### Splitting of target data into individual frequency chunks done ###\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.76562478172e-06\n"
+      "'channel,8,1,128,128'\n"
      ]
     }
    ],
