--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
-- clean minorcycle and change adaptive selfcal
+- refactor adaptive selfcal
+- add normal strategy and clean minorcycles
 - implement amp calibration
 - check for blank images/models
 - include automatic flagging of channels with HI/RFI by mean rms
 - help function
-- crosscal
-- write flag module to flag during self-/cross-calibration
+- write flag module to flag during cross-calibration
