--- a/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
+++ b/ipython-notebooks/tutorials/A1 - Calibrating single pointing full polarisation WSRT data.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +514,397 @@
    ],
    "source": [
     "ccal.transfer_to_target()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : ### Configuration file /home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg successfully read! ###\n"
+     ]
+    }
+   ],
+   "source": [
+    "scal = apercal.scal('/home/adebahr/apercal/ipython-notebooks/tutorials/cfg/A1.cfg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Moved to directory /data/adebahr/apertif/tutorial/A1/selfcal #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : ### Splitting of target data into individual freqeuncy chunks started ###\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Applying calibrator solutions to target data before averaging #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Calibrator solutions to target data applied #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Found 4 subband(s) in target data #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Started splitting of subband 0 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 0 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 0 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 0 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 0 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data for subband 0 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Started splitting of subband 1 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 1 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 1 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 1 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 1 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data for subband 1 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Started splitting of subband 2 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 2 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n0\n'channel,8,1,4,4'\n0\n'channel,8,33,4,4'\n64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n1\n'channel,8,1,4,4'\n1\n'channel,8,33,4,4'\n64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 2 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 2 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 2 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data for subband 2 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Started splitting of subband 3 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Adjusting chunk size to 0.0 for regular gridding of the data chunks over frequency #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 0 for subband 3 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 0 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 0 for subband 3 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Starting splitting of data chunk 1 for subband 3 #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Increasing frequency bin of data chunk 1 to keep bandwidth of chunks equal over the whole bandwidth #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # New frequency bin is 0.001 GHz #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data chunk 1 for subband 3 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : # Splitting of data for subband 3 done #\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SELFCAL - INFO : ### Splitting of target data into individual frequency chunks done ###\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'channel,8,1,4,4'\n2\n'channel,8,33,4,4'\n64\n0.000312499993015\n0.019999999553\n2.0\n2\n2\n3\n'channel,8,1,4,4'\n3\n'channel,8,33,4,4'\n"
+     ]
+    }
+   ],
+   "source": [
+    "scal.splitdata()"
    ]
   },
   {
